<resources>
    <string name="app_name">Mina favoritrecept</string>
    <string name="recipe_name_hint">Fyll i receptets namn</string>
    <string name="new_recipe">Nytt recept</string>
    <string name="recipe_name_label">Namn</string>
    <string name="recipe_category_label">Kategori</string>
    <string name="recipe_category_hint">Fyll i receptets kategori</string>
    <string name="recipe_ingredient_hint">Fyll i receptets ingredienser</string>
    <string name="recipe_description_hint">Fyll i receptets instruktioner</string>
    <string name="recipe_ingredient_label">Ingredienser</string>
    <string name="recipe_description_label">Instruktioner</string>
    <string name="edit_recipe">Ändra recept</string>
    <string name="recipe_image_description">Recipe Image</string>
    <string name="recipe_ingredients_label">Ingredienser</string>
    <string name="shopping_name_label">Namn</string>
    <string name="shopping_name_hint">Fyll i inköpslistans namn</string>
    <string name="store_name_hint">Fyll i affärens namn</string>
    <string name="store_category_instruction_label">Håll in för att ändra ordning</string>
    <string name="category_name_label">Kategorinamn</string>
    <string name="move_category">Move category signifier</string>
    <string name="ingredient_enter_ingredient_name">Fyll i ingrediensen</string>
    <string name="ingredient_delete_button">Delete ingredient button</string>
    <string name="itemview_shopping_listname">Inköpslistans namn</string>
    <string name="itemview_shopping_listquantity">(9)</string>
    <string name="itemview_shopping_datesample">2017–12–15</string>
    <string name="itemview_recipe_namesample">Receptnamnet</string>
    <string name="itemview_recipe_categorynamesample">Kategorinamnet</string>
    <string name="item_shoppinglivemode_ingredientnamesample">Ingrediensnamn</string>
    <string name="itemview_store_storenamesample">Namn på affär</string>
    <string name="menubutton_shoppinglists">Inköpslistor</string>
    <string name="menubutton_enter_shopping_mode">Börja handla</string>
    <string name="menubutton_new_ingredient">Ny ingrediens</string>
    <string name="menubutton_recipes">Recept</string>
    <string name="menubutton_my_stores">Mina butiker</string>
    <string name="menubutton_new_shoppinglist">Ny inköpslista</string>
    <string name="menubutton_choose_store">Välj butik</string>
    <string name="menubutton_edit">Ändra</string>
    <string name="menubutton_new_store">Ny Affär</string>
    <string name="overfor_inkopslista">Överför till inköpslista</string>
    <string name="recipe_delete_menulabel">Radera recept</string>
    <string name="klar_knapp">Klar</string>

</resources>
