<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginTop="16dp"
              android:orientation="vertical"
              tools:context="com.gmail.hozjan.samuel.minafavoritrecept.RecipeEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/edit_recipe_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/colorPrimaryDark"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                />

            <ImageButton
                android:id="@+id/edit_photo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/recipe_name_label"/>

            <EditText
                android:id="@+id/edit_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/recipe_name_hint"
                android:paddingLeft="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/recipe_category_label"/>

            <Spinner
                android:id="@+id/recipe_edit_categoryspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingTop="8dp"
        android:text="@string/recipe_ingredient_label"
        />

    <EditText
        android:id="@+id/edit_recipe_ingrediences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_ingredient_hint"
        android:paddingLeft="0dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingTop="8dp"
        android:text="@string/recipe_description_label"
        />

    <EditText
        android:id="@+id/edit_recipe_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_description_hint"
        android:paddingLeft="0dp"
        />
</LinearLayout>
