<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="4dp">


     <TextView
         android:id="@+id/shoppinglist_shopping_name"
         android:text="@string/itemview_shopping_listname"
         android:textSize="18sp"
         android:textColor="@android:color/black"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="12dp"
         app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/shoppinglist_shopping_antal_artiklar"
        android:text="@string/itemview_shopping_listquantity"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@id/shoppinglist_shopping_name"/>



    <TextView
        android:id="@+id/shoppinglist_shopping_date"
        android:text="@string/itemview_shopping_datesample"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/shoppinglist_shopping_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <View
        android:id="@+id/border"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#aa000000"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/shoppinglist_shopping_date"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <ImageButton
        android:id="@+id/shoppinglist_shopping_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/border"
        android:layout_marginBottom="8dp"/>


</android.support.constraint.ConstraintLayout>